# PLV_homework

./: main.c
complex_linux_project/calculator/: Makefile
complex_linux_project/calculator/inc/: calculator.h
complex_linux_project/calculator/libcalc/: Makefile
complex_linux_project/calculator/libcalc/inc/: libcalc.h
complex_linux_project/calculator/libcalc/src/: calc_atoi.c  calc_difference.c  calc_factorial.c  calc_fraction.c  calc_production.c  calc_sqroot.c  calc_sum.c
complex_linux_project/calculator/src/: handle_error.c  main.c  parce_arguments.c
complex_linux_project/text_formatter/: Makefile  README.md  main.c
complex_linux_project/text_formatter/inc/: convert.h
complex_linux_project/text_formatter/src/: lower.c  upper.c
docker_hw/: Dockerfile  cleanup.sh  netcat.sh  run_alpines.sh
makefile_hw/make_task_1/: Makefile_1.mk  Makefile_2.mk  Makefile_3.mk  dummy.h  dummy_src_1.c  dummy_src_2.c  main.c
makefile_hw/make_task_2/: Makefile  Makefile_dummy_1.mk  Makefile_dummy_2.mk  Makefile_dummy_3.mk  Makefile_r.mk  dummy.h  dummy_1_src.c  dummy_2_src.c  dummy_3_src.c  main.c
simple_linux_project/: Makefile.am  README.md  configure.ac
simple_linux_project/inc/: greeting.h
simple_linux_project/src/: greeting.c  main.c
